@@ -84,7 +84,7 @@ public class TestPartitionsWithZKQuorum extends D2BaseTest
                                                 InterruptedException,
                                                 Exception
   {
-    _echoServers = new ArrayList<LoadBalancerEchoServer>();
+    _echoServers = new ArrayList<>();
     setup();
     assertEquals(LoadBalancerClientCli.runDiscovery(_quorum.getHosts(), "/d2", D2_CONFIG_DEFAULT_PARTITION_DATA), 0);
     _cli = new LoadBalancerClientCli(_quorum.getHosts(), "/d2");
@@ -109,14 +109,14 @@ public class TestPartitionsWithZKQuorum extends D2BaseTest
                                                 InterruptedException,
                                                 Exception
   {
-    _echoServers = new ArrayList<LoadBalancerEchoServer>();
+    _echoServers = new ArrayList<>();
     setup();
     assertEquals(LoadBalancerClientCli.runDiscovery(_quorum.getHosts(), "/d2", D2_CONFIG_CUSTOM_PARTITION_DATA), 0);
     _cli = new LoadBalancerClientCli(_quorum.getHosts(), "/d2");
     _client = _cli.createZKFSTogglingLBClient(_quorum.getHosts(), "/d2", null);
     // Echo servers startup
-    Map<Integer, Double> partitionWeight = new HashMap<Integer, Double>();
-    partitionWeight.put(new Integer(1), new Double(1.0d));
+    Map<Integer, Double> partitionWeight = new HashMap<>();
+    partitionWeight.put(Integer.valueOf(1), Double.valueOf(1.0d));
     startCustomPartitionEchoServers(partitionWeight);
     assertAllEchoServersRegistered(_cli.getZKClient(), _zkUriString, _echoServers);
     assertQuorumProcessAllRequests(D2_CONFIG_CUSTOM_PARTITION_DATA);
@@ -135,14 +135,14 @@ public class TestPartitionsWithZKQuorum extends D2BaseTest
                                                 InterruptedException,
                                                 Exception
   {
-    _echoServers = new ArrayList<LoadBalancerEchoServer>();
+    _echoServers = new ArrayList<>();
     setup();
     assertEquals(LoadBalancerClientCli.runDiscovery(_quorum.getHosts(), "/d2", D2_CONFIG_DATA), 0);
     _cli = new LoadBalancerClientCli(_quorum.getHosts(), "/d2");
     _client = _cli.createZKFSTogglingLBClient(_quorum.getHosts(), "/d2", null);
     // Echo servers startup
-    Map<Integer, Double> partitionWeight = new HashMap<Integer, Double>();
-    partitionWeight.put(new Integer(1), new Double(1.0d));
+    Map<Integer, Double> partitionWeight = new HashMap<>();
+    partitionWeight.put(Integer.valueOf(1), Double.valueOf(1.0d));
     startAllEchoServers(partitionWeight);
     assertAllEchoServersRegistered(_cli.getZKClient(), _zkUriString, _echoServers);
     assertQuorumProcessAllRequests(D2_CONFIG_DATA);
